--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -496,7 +496,7 @@ header {
     font-size: 1rem;
 }
 
-.history-text strong {
+strong {
     color: var(--color-primary);
     font-weight: 600;
 }
