--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -279,6 +279,7 @@ header {
 }
 
 .hero-button:hover {
+    cursor: pointer;
     background-color: #0073e6;
     transform: translateY(-3px);
 }
@@ -372,7 +373,8 @@ header {
 }
 
 .services-button {
-    text-align: center;
+    display: flex;
+    justify-content: flex-end;
     margin-top: 2rem;
 }
 
